--- a/views/partials/about.hbs
+++ b/views/partials/about.hbs
@@ -13,7 +13,7 @@
 
 <!--  About us header image -->
 <div class="section bg-white pt-2 pb-2 text-center" data-aos="fade">
-  <p><img src="images/bg_hero.png" alt="Free Website Template for Restaurants by Free-Template.co" class="img-fluid"></p>
+  <p><img src="images/bg_hero.png" alt="" class="img-fluid"></p>
 </div>
 
 <!--  The Team-->
@@ -29,7 +29,7 @@
         <div class="ftco-38">
           <div class="ftco-38-img">
             <div class="ftco-38-header">
-              <img src="images/chef_1.jpg" alt="Free Website Template for Restaurants by Free-Template.co">
+              <img src="images/shalaka.png" alt="">
               <h3 class="ftco-38-heading">Shalaka Shinde</h3>
               <p class="ftco-38-subheading">Chief Shopaholic</p>
             </div>
@@ -47,7 +47,7 @@
         <div class="ftco-38">
           <div class="ftco-38-img">
             <div class="ftco-38-header">
-              <img src="images/chef_2.jpg" alt="Free Website Template for Restaurants by Free-Template.co">
+              <img src="images/rohan.png" alt="">
               <h3 class="ftco-38-heading">Rohan Kalgutkar</h3>
               <p class="ftco-38-subheading">Chief Procrastinator</p>
             </div>
@@ -67,7 +67,7 @@
         <div class="ftco-38">
           <div class="ftco-38-img">
             <div class="ftco-38-header">
-              <img src="images/chef_1.jpg" alt="Free Website Template for Restaurants by Free-Template.co">
+              <img src="images/dishika.png" alt="">
               <h3 class="ftco-38-heading">Dishika Sanil</h3>
               <p class="ftco-38-subheading">Chief Hoarder</p>
             </div>
@@ -84,7 +84,7 @@
         <div class="ftco-38">
           <div class="ftco-38-img">
             <div class="ftco-38-header">
-              <img src="images/chef_2.jpg" alt="Free Website Template for Restaurants by Free-Template.co">
+              <img src="images/ritesh.png" alt="">
               <h3 class="ftco-38-heading">Ritesh Kamble</h3>
               <p class="ftco-38-subheading">Chief Foodie</p>
             </div>
