--- a/views/index.hbs
+++ b/views/index.hbs
@@ -43,19 +43,20 @@
         <div class="site-menu-inner" id="ftco-navbar">
           <ul class="list-unstyled">
             <li><a href="#section-home">Home</a></li>
+            <li><a href="#section-products">Products</a></li>
+            <li><a href="#section-services">Services</a></li>
             <li><a href="#section-about">About</a></li>
-            <li><a href="#section-menu">Products</a></li>
-            <li><a href="#section-contact">Contact</a></li>
+            <li><a href="#section-orders">Orders</a></li>
           </ul>
         </div>
       </nav>
 
       <header class="site-header">
         <div class="row align-items-center">
-          <div class="col-5 col-md-3">
+          <div class="col-2 col-md-3">
 
           </div>
-          <div class="col-2 col-md-6 text-center site-logo-wrap">
+          <div class="col-5 col-md-6 text-center site-logo-wrap">
             <a href="/" class=""><img src="images/logo-black.png" height=70></a>
           </div>
           <div class="col-5 col-md-3 text-right menu-burger-wrap">
@@ -83,8 +84,10 @@
           </div>
         </div> <!-- .cover_1 -->
 
-        {{> insta}}
+        {{> products}}
+        {{> services}}
         {{> about}}
+        {{> order}}
 
 
         {{> footer}}
