--- a/views/index.hbs
+++ b/views/index.hbs
@@ -76,7 +76,7 @@
                 <div class="col-md-10" data-aos="fade-up">
                   <h2 class="heading mb-5">Let's make gifting simple</h2>
                   <!-- <p class="sub-heading mb-5">Let's make gifting simple.</p> -->
-                  <p><a href="#section-reservation" class="smoothscroll btn btn-outline-white px-5 py-3">
+                  <p><a href="#section-catalog" class="smoothscroll btn btn-outline-white px-5 py-3">
                     Check out Products</a></p>
                 </div>
               </div>
