--- a/views/partials/products.hbs
+++ b/views/partials/products.hbs
@@ -41,7 +41,7 @@
 </div>
 
 <!--  Complete Catalogue -->
-<div class="section bg-white" id="section-menu" data-aos="fade-up">
+<div class="section bg-white" id="section-catalog" data-aos="fade-up">
   <div class="container">
     <div class="row section-heading justify-content-center mb-5">
       <div class="col-md-8 text-center">
