team bio update

--- a/views/partials/about.hbs
+++ b/views/partials/about.hbs
@@ -34,7 +34,9 @@
               <p class="ftco-38-subheading">Chief Shopaholic</p>
             </div>
             <div class="ftco-38-body">
-              <p>24, Architect & TV Series addict. </p>
+              <p>Architect with borderline TV series addiction.
+                <i><br>#FollowDreamsNotOrders</i>
+              </p>
               <p>
                 <a href="http://falaka14.tumblr.com/" class="p-2"><span class="fab fa-tumblr"></span></a>
                 <a href="https://www.instagram.com/falaka14" class="p-2"><span class="fab fa-instagram"></span></a>
@@ -86,10 +88,12 @@
             <div class="ftco-38-header">
               <img src="images/ritesh.png" alt="">
               <h3 class="ftco-38-heading">Ritesh Kamble</h3>
-              <p class="ftco-38-subheading">Chief Foodie</p>
+              <p class="ftco-38-subheading">Chief Troublemaker</p>
             </div>
             <div class="ftco-38-body">
-              <p>Aayushaat thambaycha naahi!</p>
+              <p>Engineer and curious soul. Love Mumbai and its food!
+                <i><br>#EatSleepWorkRepeat</i>
+              </p>
               <p>
                 <a href="#" class="p-2"><span class="fab fa-facebook"></span></a>
                 <a href="#" class="p-2"><span class="fab fa-instagram"></span></a>
