--- a/views/partials/about.hbs
+++ b/views/partials/about.hbs
@@ -5,7 +5,7 @@
       <div class="col-md-12 col-lg-8 section-heading">
         <h2 class="heading mb-5">The Terrarium Story Company</h2>
         <p>Here will come our mission / vision. Something about making gifting simple. About gifting something that grows with you. Generic statements about nature and plants. </p>
-        <p>A catchy one-liner tagline of sorts will go here.</p>
+        <h3>Make us a chapter of yours!</h3>
       </div>
     </div>
   </div>
@@ -34,7 +34,7 @@
               <p class="ftco-38-subheading">Chief Shopaholic</p>
             </div>
             <div class="ftco-38-body">
-              <p>Architect with borderline TV series addiction.
+              <p>Architect with borderline <br> TV series addiction.
                 <i><br>#FollowDreamsNotOrders</i>
               </p>
               <p>
@@ -74,8 +74,11 @@
               <p class="ftco-38-subheading">Chief Hoarder</p>
             </div>
             <div class="ftco-38-body">
-              <p>Loves art, architecture & to travel</p>
+              <p>Full time architect, <br> part time nap enthusiast.
+                <br><i>#SomethingWithPixieDust</i>
+              </p>
               <p>
+                <a href="https://vsco.co/dish-10/" class="p-2"><span class="fas fa-camera-retro"></span></a>
                 <a href="https://www.instagram.com/dish.s_10" class="p-2"><span class="fab fa-instagram"></span></a>
               </p>
             </div>
@@ -91,18 +94,18 @@
               <p class="ftco-38-subheading">Chief Troublemaker</p>
             </div>
             <div class="ftco-38-body">
-              <p>Engineer and curious soul. Love Mumbai and its food!
+              <p>Engineer and curious soul.
+                <br> Loves Mumbai and its food!
                 <i><br>#EatSleepWorkRepeat</i>
               </p>
               <p>
-                <a href="#" class="p-2"><span class="fab fa-facebook"></span></a>
-                <a href="#" class="p-2"><span class="fab fa-instagram"></span></a>
+                <a href="https://www.facebook.com/ritesh.kamble.104" class="p-2"><span class="fab fa-facebook"></span></a>
+                <a href="https://www.instagram.com/riteshkamble519/" class="p-2"><span class="fab fa-instagram"></span></a>
               </p>
             </div>
           </div>
         </div>
       </div>
-
     </div>
   </div>
 </div>
