--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,116 +1,26 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <title>thetstoryco | Let's make gifting simple</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Home decor, gifting & more." />
-    <meta name="keywords" content="Home decor, cactus, succulents, dream catchers, gifts" />
-    <meta name="author" content="Rohan Kalgutkar" />
+{{> header}}
 
-    <!--  favicon -->
-    <link rel="shortcut icon" href="images/ficon.png">
+<div class="main-wrap " id="section-home">
 
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:300,400,700,800|Open+Sans:300,400,700" rel="stylesheet">
-
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/aos.css">
-
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="css/jquery.timepicker.css">
-
-    <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
-    <!-- <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-
-    <!-- Theme Style -->
-    <link rel="stylesheet" href="css/style.css">
-
-  </head>
-  <body class="bg-light">
-
-    <body data-spy="scroll" data-target="#ftco-navbar-spy" data-offset="0">
-
-    <div class="site-wrap">
-
-      <nav class="site-menu" id="ftco-navbar-spy">
-        <div class="site-menu-inner" id="ftco-navbar">
-          <ul class="list-unstyled">
-            <li><a href="#section-home">Home</a></li>
-            <li><a href="#section-products">Products</a></li>
-            <li><a href="#section-services">Services</a></li>
-            <li><a href="#section-about">About</a></li>
-            <li><a href="#section-orders">Orders</a></li>
-          </ul>
-        </div>
-      </nav>
-
-      <header class="site-header">
-        <div class="row align-items-center">
-          <div class="col-2 col-md-3">
-
-          </div>
-          <div class="col-5 col-md-6 text-center site-logo-wrap">
-            <a href="/" class=""><img src="images/logo-black.png" height=70></a>
-          </div>
-          <div class="col-5 col-md-3 text-right menu-burger-wrap">
-            <a href="#" class="site-nav-toggle js-site-nav-toggle"><i></i></a>
-
+  <div class="cover_1 overlay bg-slant-white bg-light">
+    <div class="img_bg" style="background-image: url(images/header.jpg);" data-stellar-background-ratio="0.5">
+      <div class="container">
+        <div class="row align-items-center justify-content-center text-center">
+          <div class="col-md-10" data-aos="fade-up">
+            <h2 class="heading mb-5">Let's make gifting simple</h2>
+            <!-- <p class="sub-heading mb-5">Let's make gifting simple.</p> -->
+            <p><a href="/products" class="smoothscroll btn btn-outline-white px-5 py-3">
+              Check out Products</a></p>
           </div>
         </div>
-
-      </header> <!-- site-header -->
-
-      <div class="main-wrap " id="section-home">
-
-        <div class="cover_1 overlay bg-slant-white bg-light">
-          <div class="img_bg" style="background-image: url(images/header.jpg);" data-stellar-background-ratio="0.5">
-            <div class="container">
-              <div class="row align-items-center justify-content-center text-center">
-                <div class="col-md-10" data-aos="fade-up">
-                  <h2 class="heading mb-5">Let's make gifting simple</h2>
-                  <!-- <p class="sub-heading mb-5">Let's make gifting simple.</p> -->
-                  <p><a href="#section-catalog" class="smoothscroll btn btn-outline-white px-5 py-3">
-                    Check out Products</a></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> <!-- .cover_1 -->
-
-        {{> products}}
-        {{> services}}
-        {{> about}}
-        {{> order}}
-
-
-        {{> footer}}
-
+      </div>
     </div>
+  </div>
 
-    <!-- loader -->
-    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#ff7a5c"/></svg></div>
 
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
+  {{> trending}}
+  {{> about}}
+  {{> testimonials}}
+  {{> contact}}
 
-    <script src="js/bootstrap-datepicker.js"></script>
-    <script src="js/jquery.timepicker.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-
-    <script src="js/jquery.easing.1.3.js"></script>
-
-    <script src="js/aos.js"></script>
-    <script src="js/main.js"></script>
-  </body>
-</html>
+  {{> footer}}
