--- a/views/partials/contact.hbs
+++ b/views/partials/contact.hbs
@@ -5,43 +5,65 @@
         <h2 class="heading mb-3">Get In Touch</h2>
         <p class="sub-heading mb-5">For any inquiries, support, bulk orders or collaboration, <br> please feel free to contact us.</p>
       </div>
+      {{#if dFlag}}
+      <div class="col-md-6 text-center">
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          <small> <i> Your message has been sent! We'll contact you shortly. </i></small>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </div>
+      {{/if}}
+      {{#if eFlag}}
+      <div class="col-md-6 text-center">
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+          <small> Oops! There was an issue, please try again later.
+            <br>Or contact us using the details at the bottom of the page.
+          </small>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </div>
+      {{/if}}
     </div>
     <div class="row justify-content-center">
       <div class="col-md-10 p-5 form-wrap">
-        <form action="#">
+        <form action="/contact" method="post">
           <div class="row mb-4">
             <div class="form-group col-md-4">
               <label for="name" class="label">Name</label>
               <div class="form-field-icon-wrap">
                 <span class="icon ion-android-person"></span>
-                <input type="text" class="form-control" id="name">
+                <input type="text" class="form-control" id="name" name="name">
               </div>
-            </div>
-            <div class="form-group col-md-4">
-              <label for="email" class="label">Email</label>
-              <div class="form-field-icon-wrap">
-                <span class="icon ion-email"></span>
-                <input type="email" class="form-control" id="email">
               </div>
-            </div>
-            <div class="form-group col-md-4">
-              <label for="phone" class="label">Phone</label>
-              <div class="form-field-icon-wrap">
-                <span class="icon ion-android-call"></span>
-                <input type="text" class="form-control" id="phone">
+              <div class="form-group col-md-4">
+                <label for="email" class="label">Email</label>
+                <div class="form-field-icon-wrap">
+                  <span class="icon ion-email"></span>
+                  <input type="email" class="form-control" id="email" name="email">
               </div>
-            </div>
+                </div>
+                <div class="form-group col-md-4">
+                  <label for="phone" class="label">Phone</label>
+                  <div class="form-field-icon-wrap">
+                    <span class="icon ion-android-call"></span>
+                    <input type="text" class="form-control" id="phone" name="phone">
+              </div>
+                  </div>
 
-           <div class="form-group col-md-12">
-              <label for="message" class="label">Message</label>
-             <textarea name="message" id="message" cols="30" rows="10" class="form-control"></textarea>
-           </div>
-          </div>
-          <div class="row justify-content-center">
-            <div class="col-md-4">
-              <input type="submit" class="btn btn-primary btn-outline-primary btn-block" value="Send Message">
+                  <div class="form-group col-md-12">
+                    <label for="message" class="label">Message</label>
+                    <textarea name="message" id="message" cols="30" rows="10" class="form-control"></textarea>
+                  </div>
+                </div>
+                <div class="row justify-content-center">
+                  <div class="col-md-4">
+                    <input type="submit" class="btn btn-primary btn-outline-primary btn-block" value="Send Message">
             </div>
-          </div>
+                  </div>
         </form>
       </div>
     </div>
