--- a/views/products.hbs
+++ b/views/products.hbs
@@ -25,25 +25,26 @@
               <a class="nav-link" id="pills-design-tab" data-toggle="pill" href="#pills-design" role="tab" aria-controls="pills-design" aria-selected="false">Design</a>
             </li>
           </ul>
+          <form class="" action="index.html" method="post">
           <div class="tab-content" id="pills-tabContent">
 
             <!--  Planter Items-->
+
             <div class="tab-pane fade show active" id="pills-planter" role="tabpanel" aria-labelledby="pills-planter-tab">
-
               <div class="d-block d-md-flex menu-food-item">
-
                 <div class="text order-1 mb-3">
                   <img src="images/img_1.jpg">
                   <h3><a href="#">Some Planter Option 1</a></h3>
                   <p>Spinach and artichokes in a creamy cheese dip with warm tortilla chips &amp; salsa.</p>
                 </div>
                 <div class="price order-2">
-                  <strong>$10.49</strong>
+                  <strong>₹100.49</strong>
+                  <input type="checkbox" name="planter1" value="planterCode1">
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade" id="pills-plant" role="tabpanel" aria-labelledby="pills-plant-tab">
 
+            <div class="tab-pane fade" id="pills-plant" role="tabpanel" aria-labelledby="pills-plant-tab">
               <div class="d-block d-md-flex menu-food-item">
                 <div class="text order-1 mb-3">
                   <img src="images/img_2.jpg">
@@ -51,12 +52,13 @@
                   <p>Spinach and artichokes in a creamy cheese dip with warm tortilla chips &amp; salsa.</p>
                 </div>
                 <div class="price order-2">
-                  <strong>$12.49</strong>
+                  <strong>₹120.49</strong>
+                  <input type="checkbox" name="plant1" value="plantCode1">
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade" id="pills-design" role="tabpanel" aria-labelledby="pills-design-tab">
 
+            <div class="tab-pane fade" id="pills-design" role="tabpanel" aria-labelledby="pills-design-tab">
               <div class="d-block d-md-flex menu-food-item">
                 <div class="text order-1 mb-3">
                   <img src="images/img_3.jpg">
@@ -64,11 +66,15 @@
                   <p>Spinach and artichokes in a creamy cheese dip with warm tortilla chips &amp; salsa.</p>
                 </div>
                 <div class="price order-2">
-                  <strong>$18.99</strong>
+                  <strong>₹180.99</strong>
+                  <input type="checkbox" name="design1" value="design1">
                 </div>
               </div>
             </div>
+
+            <button type="submit" name="button"></button>
           </div>
+        </form>
         </div>
 
       </div>
