--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,16 +7,26 @@
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-10" data-aos="fade-up">
-            <h2 class="heading mb-5">Let's make gifting simple</h2>
-            <!-- <p class="sub-heading mb-5">Let's make gifting simple.</p> -->
-            <p><a href="/products" class="smoothscroll btn btn-outline-white px-5 py-3">
-              Check out Products</a></p>
+            <h2 class="heading mb-5 typewrite"></h2>
+          <p><a href="/products" class="smoothscroll btn btn-outline-white px-5 py-3">
+            Check out Products</a></p>
           </div>
         </div>
       </div>
     </div>
   </div>
 
+<script type="text/javascript">
+
+var options = {
+strings: ["Lets make gifting simple. ^700","Lets make gifting^600 green.", "Lets make gifting^600 fun."],
+typeSpeed: 80,
+backSpeed: 70,
+loop: true
+}
+
+var typed = new Typed(".typewrite", options);
+</script>
 
   {{> trending}}
   {{> about}}
