--- a/views/partials/about.hbs
+++ b/views/partials/about.hbs
@@ -14,10 +14,8 @@
 <!--  About us header image -->
 <div class="section bg-white pt-2 pb-2 text-center" data-aos="fade">
   <p><img src="images/bg_hero.png" alt="" class="img-fluid"></p>
-</div>
 
-<!--  The Team-->
-<div class="section bg-white" data-aos="fade-up">
+<div data-aos="fade-up">
   <div class="container-fluid">
     <div class="row mb-5">
       <div class="col-md-12 section-heading text-center">
@@ -108,4 +106,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
