--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -13,6 +13,9 @@
 
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:300,400,700,800|Open+Sans:300,400,700" rel="stylesheet">
 
+    <!--  typewrite effect-->
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
+
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
