--- a/views/partials/about.hbs
+++ b/views/partials/about.hbs
@@ -4,7 +4,10 @@
     <div class="row align-items-center justify-content-center">
       <div class="col-md-12 col-lg-8 section-heading">
         <h2 class="heading mb-5">The Terrarium Story Company</h2>
-        <p>Here will come our mission / vision. Something about making gifting simple. About gifting something that grows with you. Generic statements about nature and plants. </p>
+        <p>Because succulents and cacti grow through the toughest conditions,  we, at thetstory believe that they make a great metaphor for who we are. Strong, resilient and someword. We have one vision — to make gifting simple.
+        <br>
+         This is us, from roots to fruits.
+       </p>
         <h3>Make us a chapter of yours!</h3>
       </div>
     </div>
