--- a/views/partials/trending.hbs
+++ b/views/partials/trending.hbs
@@ -13,7 +13,7 @@
           <div class="ftco-46-text ftco-46-arrow-left">
             <h3 class="ftco-46-heading">Lilly with Haworthia</h3>
             <h4 class="ftco-46-subheading">Terracotta</h4>
-            <p class="mb-5">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+            <p class="mb-5">Signature terracotta planters with our very own cutie, Lilly.</p>
             <p><a href="/products" class="btn-link">Order Now <span class="ion-android-arrow-forward"></span></a></p>
           </div>
           <div class="ftco-46-image" style="background-image: url(images/products/jaadu.jpg);"></div>
@@ -23,14 +23,14 @@
           <div class="ftco-46-text ftco-46-arrow-right">
             <h3 class="ftco-46-heading">Group Hug, Kids!</h3>
             <!-- <h4 class="ftco-46-subheading">Food</h4> -->
-            <p class="mb-5">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+            <p class="mb-5">Photo-op from our first ever batch. Standing proud!</p>
             <p><a href="/products" class="btn-link">Order Now <span class="ion-android-arrow-forward"></span></a></p>
           </div>
           <div class="ftco-46-image" style="background-image: url(images/products/grouphug.JPG);"></div>
           <div class="ftco-46-text ftco-46-arrow-up">
             <h3 class="ftco-46-heading">Jaadu with Zebra Haworthia</h3>
             <h4 class="ftco-46-subheading">Terracotta</h4>
-            <p class="mb-5">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p>
+            <p class="mb-5">Even the all-powerful Pointing has no control about the blind texts it.</p>
             <p><a href="/products" class="btn-link">Order Now <span class="ion-android-arrow-forward"></span></a></p>
           </div>
         </div>
