--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,7 +19,7 @@
 <script type="text/javascript">
 
 var options = {
-strings: ["Lets make gifting simple. ^700","Lets make gifting^600 green.", "Lets make gifting^750 not succ.", "Lets make gifting a story^500."],
+strings: ["Lets make gifting simple. ^700","Lets make gifting^600 green.", "Lets make gifting^750 not succ.", "Lets make gifting a story.^500", "Let's make gifting memorable.^600"],
 typeSpeed: 80,
 backSpeed: 70,
 loop: true
