Minor adjustments to the products page

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -3,7 +3,7 @@
 <div class="main-wrap " id="section-products">
 
   <div class="section bg-white" id="section-catalog" data-aos="fade-up">
-    <div class="container" style="padding-top: 40px">
+    <div class="container" style="padding-top: 80px">
       <div class="row section-heading justify-content-center mb-5">
         <div class="col-md-8 text-center">
           <h2 class="heading mb-3">Bespoke</h2>
@@ -26,55 +26,59 @@
             </li>
           </ul>
           <form class="" action="index.html" method="post">
-          <div class="tab-content" id="pills-tabContent">
+            <div class="tab-content" id="pills-tabContent">
 
-            <!--  Planter Items-->
+              <!--  Planter Items-->
 
-            <div class="tab-pane fade show active" id="pills-planter" role="tabpanel" aria-labelledby="pills-planter-tab">
-              <div class="d-block d-md-flex menu-food-item">
-                <div class="text order-1 mb-3">
-                  <img src="images/img_1.jpg">
-                  <h3><a href="#">Some Planter Option 1</a></h3>
-                  <p>Spinach and artichokes in a creamy cheese dip with warm tortilla chips &amp; salsa.</p>
+              <div class="tab-pane fade show active" id="pills-planter" role="tabpanel" aria-labelledby="pills-planter-tab">
+                <div class="d-block d-md-flex menu-food-item">
+                  <div class="text order-1 mb-3">
+                    <img src="images/img_1.jpg">
+                    <h3><a href="#">Some Planter Option 1</a></h3>
+                    <p>Spinach and artichokes in a creamy cheese dip with warm tortilla chips &amp; salsa.</p>
+                  </div>
+                  <div class="price order-2">
+                    <strong>₹100.49</strong>
+                    <input type="checkbox" name="planter1" value="planterCode1">
+</div>
+                  </div>
                 </div>
-                <div class="price order-2">
-                  <strong>₹100.49</strong>
-                  <input type="checkbox" name="planter1" value="planterCode1">
-                </div>
-              </div>
-            </div>
 
-            <div class="tab-pane fade" id="pills-plant" role="tabpanel" aria-labelledby="pills-plant-tab">
-              <div class="d-block d-md-flex menu-food-item">
-                <div class="text order-1 mb-3">
-                  <img src="images/img_2.jpg">
-                  <h3><a href="#">Plant Option 1</a></h3>
-                  <p>Spinach and artichokes in a creamy cheese dip with warm tortilla chips &amp; salsa.</p>
-                </div>
-                <div class="price order-2">
-                  <strong>₹120.49</strong>
-                  <input type="checkbox" name="plant1" value="plantCode1">
-                </div>
-              </div>
-            </div>
+                <div class="tab-pane fade" id="pills-plant" role="tabpanel" aria-labelledby="pills-plant-tab">
+                  <div class="d-block d-md-flex menu-food-item">
+                    <div class="text order-1 mb-3">
+                      <img src="images/img_2.jpg">
+                      <h3><a href="#">Plant Option 1</a></h3>
+                      <p>Spinach and artichokes in a creamy cheese dip with warm tortilla chips &amp; salsa.</p>
+                    </div>
+                    <div class="price order-2">
+                      <strong>₹120.49</strong>
+                      <input type="checkbox" name="plant1" value="plantCode1">
+</div>
+                    </div>
+                  </div>
 
-            <div class="tab-pane fade" id="pills-design" role="tabpanel" aria-labelledby="pills-design-tab">
-              <div class="d-block d-md-flex menu-food-item">
-                <div class="text order-1 mb-3">
-                  <img src="images/img_3.jpg">
-                  <h3><a href="#">Design Option 1</a></h3>
-                  <p>Spinach and artichokes in a creamy cheese dip with warm tortilla chips &amp; salsa.</p>
-                </div>
-                <div class="price order-2">
-                  <strong>₹180.99</strong>
-                  <input type="checkbox" name="design1" value="design1">
-                </div>
-              </div>
-            </div>
+                  <div class="tab-pane fade" id="pills-design" role="tabpanel" aria-labelledby="pills-design-tab">
+                    <div class="d-block d-md-flex menu-food-item">
+                      <div class="text order-1 mb-3">
+                        <img src="images/img_3.jpg">
+                        <h3><a href="#">Design Option 1</a></h3>
+                        <p>Spinach and artichokes in a creamy cheese dip with warm tortilla chips &amp; salsa.</p>
+                      </div>
+                      <div class="price order-2">
+                        <strong>₹180.99</strong>
+                        <input type="checkbox" name="design1" value="design1">
+</div>
+                      </div>
+                    </div>
 
-            <button type="submit" name="button"></button>
-          </div>
-        </form>
+                      </div>
+                      <div class="justify-content-center">
+                      <div class="offset-md-3 col-md-5">
+                        <input type="submit" class="btn btn-primary btn-outline-primary btn-block" value="Select">
+                      </div>
+                    </div>
+          </form>
         </div>
 
       </div>
@@ -88,9 +92,9 @@
           <h2 class="heading mb-3">Reccommendations</h2>
           <p class="sub-heading mb-5">We're working on a seamless way to help you order our products, meanwhile..</p>
         </div>
-          <div class="col-md-10 p-5 form-wrap"></div>
+        <div class="col-md-10 p-5 form-wrap"></div>
       </div>
     </div>
   </div>
 
-{{> footer}}
+  {{> footer}}
