--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,8 +8,16 @@
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-10" data-aos="fade-up">
             <h2 class="heading mb-5 typewrite"></h2>
-          <p><a href="/products" class="smoothscroll btn btn-outline-white px-5 py-3">
-            Check out Products</a></p>
+
+            <div class="row">
+              <div class="offset-md-3 col-md-3">
+                <p><a href="#section-trending" class="smoothscroll btn btn-outline-white px-5 py-3">Know More</a></p>
+              </div>
+              <div class="col-md-4">
+                <p><a href="/products" class="smoothscroll btn btn-outline-white px-5 py-3">Check Products</a></p>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
