--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-10" data-aos="fade-up">
-            <h2 class="heading mb-5 typewrite"></h2>
+            <h2 class="heading mb-5 element"></h2>
 
             <div class="row">
               <div class="offset-md-3 col-md-3">
@@ -27,13 +27,14 @@
 <script type="text/javascript">
 
 var options = {
-strings: ["Lets make gifting simple. ^700","Lets make gifting^600 green.", "Lets make gifting^750 not succ.", "Lets make gifting a story.^500", "Lets make gifting memorable.^600"],
+strings: ["Lets make gifting simple. ^700","Lets make gifting^600 green.", "Lets make gifting^750 not succ.", "Lets make gifting^800 a story.", "Lets make gifting^500 fun.^600"],
 typeSpeed: 80,
 backSpeed: 70,
-loop: true
+loop: true,
+showCursor: true
 }
 
-var typed = new Typed(".typewrite", options);
+var typed = new Typed(".element", options);
 </script>
 
   {{> trending}}
