--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,7 +14,7 @@
                 <p><a href="#section-trending" class="smoothscroll btn btn-outline-white px-5 py-3">Know More</a></p>
               </div>
               <div class="col-md-4">
-                <p><a href="/products" class="smoothscroll btn btn-outline-white px-5 py-3">Check Products</a></p>
+                <p><a href="/catalogue" class="smoothscroll btn btn-outline-white px-5 py-3">Catalogue</a></p>
               </div>
             </div>
 
