--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -9,7 +9,7 @@
     <meta name="author" content="Rohan Kalgutkar" />
 
     <!--  favicon -->
-    <link rel="shortcut icon" href="images/ficon.png">
+    <link rel="shortcut icon" href="images/fav.png">
 
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:300,400,700,800|Open+Sans:300,400,700" rel="stylesheet">
 
@@ -47,13 +47,13 @@
           <ul class="list-unstyled">
             {{#if pageHome}}
             <li><a href="#section-home">Home</a></li>
-            <li><a href="products">Products</a></li>
+            <li><a href="/catalogue">Catalogue</a></li>
             <li><a href="#section-about">About</a></li>
             <li><a href="#section-contact">Contact</a></li>
             {{/if}}
             {{#if pageProduct}}
             <li><a href="/">Home</a></li>
-            <li><a href="/">Bespoke</a></li>
+            <li><a href="/">Catalogue</a></li>
             <li><a href="/">Reccommendations</a></li>
             {{/if}}
           </ul>
