Reduced catalog image height

--- a/views/catalogue.hbs
+++ b/views/catalogue.hbs
@@ -13,7 +13,7 @@
         <div class="col-m mb-5d-6 col-lg-3" data-aos="fade-up">
           <div class="media feature-icon d-block">
             <div class="mb-3 text-center">
-              <img src="images/order-process/selection.png" alt="">
+              <img src="images/order-process/selection.png" class="order-process-pic">
             </div>
               <div class="media-body order-process">
                 <h3 class="text-center">Selection</h3>
@@ -32,7 +32,7 @@
           <div class="col-m mb-5d-6 col-lg-3" data-aos="fade-up">
             <div class="media feature-icon d-block">
               <div class="mb-3 text-center">
-                <img src="images/order-process/order.png" alt="">
+                <img src="images/order-process/order.png" class="order-process-pic">
               </div>
                 <div class="media-body order-process">
                   <h3 class="text-center">Order</h3>
@@ -50,7 +50,7 @@
             <div class="col-m mb-5d-6 col-lg-3" data-aos="fade-up">
               <div class="media feature-icon d-block">
                 <div class="mb-3 text-center">
-                  <img src="images/order-process/confirmation.png" alt="">
+                  <img src="images/order-process/confirmation.png" class="order-process-pic">
                 </div>
                   <div class="media-body order-process">
                     <h3 class="text-center">Confirmation</h3>
@@ -69,7 +69,7 @@
               <div class="col-m mb-5d-6 col-lg-3" data-aos="fade-up">
                 <div class="media feature-icon d-block">
                   <div class="mb-3 text-center">
-                    <img src="images/order-process/delivery.png" alt="">
+                    <img src="images/order-process/delivery.png" class="order-process-pic">
                   </div>
                     <div class="media-body order-process">
                       <h3 class="text-center">Delivery</h3>
